@@ -16,6 +16,11 @@ increase of about 75 nanoseconds per call.
 Added `transform_coordseq`, which applies a transformation function per coordinate sequence
 in a more performant way than `shapely.ops.transform` does. `shapely.ops.transform` is now deprecated.
 
+Bug fixes:
+
+- Fix error when splitting a linestring with a point very close to a vertex, leading to
+  a floating point precision issue (#).
+
 2.1.2 (2025-09-24)
 ------------------
 
